# BianFu

./: .gitignore  BFLexer.g4  BFParser.g4  CMakeLists.txt  README.md  TLexer.g4  TParser.g4  main.cpp  test  test.out
src/: main.cpp  main1.cpp  test_llvm_ir.cpp
src/error/: BianFuError.cpp  BianFuError.h  BianFuErrorListener.cpp  BianFuErrorListener.h  BianFuLog.cpp  BianFuLog.h
src/scope/: BFPrimitive.cpp  BFPrimitive.h  BFVariable.cpp  BFVariable.h  CompilerScope.cpp  CompilerScope.h  Scope.cpp  Scope.h
src/scope/primitives/: BFFloatPrimitive.cpp  BFFloatPrimitive.h  BFIntPrimitive.cpp  BFIntPrimitive.h
src/scope/special/: BFFunc.cpp  BFFunc.h
src/visitors/: ClassVisitor.cpp  ClassVisitor.h  CompileVisitor.cpp  CompileVisitor.h  ExecuteVisitor.cpp  ExecuteVisitor.h
